Fix search type field alignment (and other selects as well).

--- a/themes/bootstrap5/scss/bs3-compat.scss
+++ b/themes/bootstrap5/scss/bs3-compat.scss
@@ -232,8 +232,6 @@ button.list-group-item {
 
 .form-select {
   appearance: auto;
-  padding-top: 0.525rem;
-  padding-bottom: 0.525rem;
 }
 
 textarea.form-control {
